force-app/main/default/objects/DEMO_ISO_Table__c/DEMO_ISO_Table__c.object-meta.xml
<CustomObject>
    <label>DEMO ISO ERC</label>
    <nameField>
        <label>DEMO ISO Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DEMO ISO ERC</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>