force-app/main/default/objects/DEMO_ISO_Table__c/fields/Aggregate_Limit__c.field-meta.xml
<CustomField>
    <fullName>Aggregate_Limit__c</fullName>
    <label>Aggregate Limit</label>
    <length>50</length>
    <type>Text</type>
</CustomField>