force-app/main/default/objects/DEMO_ISO_Table__c/fields/Basis__c.field-meta.xml
<CustomField>
    <fullName>Basis__c</fullName>
    <label>Basis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Exposure_Base</valueSetName>
    </valueSet>
</CustomField>