force-app/main/default/objects/DEMO_ISO_Table__c/fields/Claims_Basis__c.field-meta.xml
<CustomField>
    <fullName>Claims_Basis__c</fullName>
    <label>Claims Basis</label>
    <length>50</length>
    <type>Text</type>
</CustomField>