force-app/main/default/objects/DEMO_ISO_Table__c/fields/Deductible__c.field-meta.xml
<CustomField>
    <fullName>Deductible__c</fullName>
    <label>Deductible</label>
    <length>50</length>
    <type>Text</type>
</CustomField>