force-app/main/default/objects/DEMO_ISO_Table__c/fields/Hazard_Grade_HG__c.field-meta.xml
<CustomField>
    <fullName>Hazard_Grade_HG__c</fullName>
    <label>Hazard Grade(HG)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>