force-app/main/default/objects/DEMO_ISO_Table__c/fields/Occurence_Limit__c.field-meta.xml
<CustomField>
    <fullName>Occurence_Limit__c</fullName>
    <label>Occurence Limit</label>
    <length>50</length>
    <type>Text</type>
</CustomField>