force-app/main/default/objects/DEMO_ISO_Table__c/fields/RateState__c.field-meta.xml
<CustomField>
    <fullName>RateState__c</fullName>
    <label>RateState</label>
    <length>50</length>
    <type>Text</type>
</CustomField>