force-app/main/default/objects/DEMO_ISO_Table__c/fields/SIC_Description__c.field-meta.xml
<CustomField>
    <fullName>SIC_Description__c</fullName>
    <label>SIC Description</label>
    <length>75</length>
    <type>Text</type>
</CustomField>