force-app/main/default/objects/DEMO_ISO_Table__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Hazard_Grade_HG__c</columns>
    <columns>Rate__c</columns>
    <columns>Basis__c</columns>
    <columns>SIC_Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>