force-app/main/default/objects/DEMO_ISO_Table__c/listViews/N2G.listView-meta.xml
<ListView>
    <fullName>N2G</fullName>
    <columns>Basis__c</columns>
    <columns>Rate__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Hazard_Grade_HG__c</columns>
    <columns>SIC_Description__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Hazard_Grade_HG__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>N2G</label>
</ListView>